[gd_scene load_steps=5 format=3 uid="uid://c7k2h1p5qalaa"]

[ext_resource type="Theme" uid="uid://jddhsc4auo55" path="res://addons/diisis/editor/visuals/amber_cherryblossom.tres" id="1_6al0s"]
[ext_resource type="Script" path="res://addons/diisis/editor/src/text_content.gd" id="1_uudox"]
[ext_resource type="PackedScene" uid="uid://bgbnqa4jqrx7w" path="res://addons/diisis/editor/src/typing_hint.tscn" id="3_8xrow"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_srwr3"]
number_color = Color(0.976822, 0.706174, 0.89807, 1)
symbol_color = Color(0.863144, 5.31363e-05, 0.655125, 1)
function_color = Color(0.747536, 0.121441, 0.22022, 1)
member_variable_color = Color(0.323408, 0.685104, 0.939903, 1)

[node name="TextContent" type="VBoxContainer" groups=["page_view_sensitive"]]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource("1_6al0s")
script = ExtResource("1_uudox")

[node name="DialogSyntaxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="UseDialogSyntaxButton" type="CheckBox" parent="DialogSyntaxContainer"]
layout_mode = 2
focus_mode = 0
text = "Use dialog syntaxing"

[node name="DialogSyntaxControls" type="PanelContainer" parent="DialogSyntaxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DialogSyntaxContainer/DialogSyntaxControls"]
layout_mode = 2

[node name="DropDownForActors" type="OptionButton" parent="DialogSyntaxContainer/DialogSyntaxControls/HBoxContainer"]
layout_mode = 2
allow_reselect = true

[node name="ActiveActorsContainer" type="VBoxContainer" parent="DialogSyntaxContainer/DialogSyntaxControls/HBoxContainer"]
layout_mode = 2

[node name="ActiveActorsLabel" type="Label" parent="DialogSyntaxContainer/DialogSyntaxControls/HBoxContainer/ActiveActorsContainer"]
layout_mode = 2

[node name="TextBox" type="CodeEdit" parent="."]
clip_contents = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
placeholder_text = "enter text here"
wrap_mode = 1
autowrap_mode = 2
scroll_fit_content_height = true
caret_blink = true
caret_multiple = false
syntax_highlighter = SubResource("CodeHighlighter_srwr3")
code_completion_enabled = true
indent_automatic_prefixes = Array[String]([])

[node name="Hints" type="Node" parent="."]

[node name="DialogActorHint" parent="Hints" instance=ExtResource("3_8xrow")]
position = Vector2i(0, 36)
visible = false

[node name="ControlSequenceHint" parent="Hints" instance=ExtResource("3_8xrow")]
position = Vector2i(0, 36)
visible = false

[node name="DialogArgumentHint" parent="Hints" instance=ExtResource("3_8xrow")]
position = Vector2i(0, 36)
visible = false

[node name="DialogArgumentValueHint" parent="Hints" instance=ExtResource("3_8xrow")]
position = Vector2i(0, 36)
visible = false

[connection signal="toggled" from="DialogSyntaxContainer/UseDialogSyntaxButton" to="." method="_on_use_dialog_syntax_button_toggled"]
[connection signal="item_selected" from="DialogSyntaxContainer/DialogSyntaxControls/HBoxContainer/DropDownForActors" to="." method="_on_drop_down_for_actors_item_selected"]
[connection signal="caret_changed" from="TextBox" to="." method="_on_text_box_caret_changed"]
[connection signal="code_completion_requested" from="TextBox" to="." method="_on_text_box_code_completion_requested"]
[connection signal="focus_entered" from="TextBox" to="." method="_on_text_box_focus_entered"]
[connection signal="text_changed" from="TextBox" to="." method="_on_text_box_text_changed"]
[connection signal="about_to_close" from="Hints/DialogActorHint" to="." method="type_hint_about_to_close"]
[connection signal="item_chosen" from="Hints/DialogActorHint" to="." method="_on_dialog_actor_hint_item_chosen"]
[connection signal="item_chosen" from="Hints/ControlSequenceHint" to="." method="_on_control_sequence_hint_item_chosen"]
[connection signal="about_to_close" from="Hints/DialogArgumentHint" to="." method="type_hint_about_to_close"]
[connection signal="item_chosen" from="Hints/DialogArgumentHint" to="." method="_on_dialog_argument_hint_item_chosen"]
[connection signal="about_to_close" from="Hints/DialogArgumentValueHint" to="." method="type_hint_about_to_close"]
[connection signal="item_chosen" from="Hints/DialogArgumentValueHint" to="." method="_on_dialog_argument_value_hint_item_chosen"]
